--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
 
-  <h2 text-center>Select Your Choice</h2>
+  <h2 text-center>Select Your Favourite Choice</h2>
 
   <img src="assets/imgs/logo.jpg">
   <p></p>
