change one line

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
   <h2 text-center>Welcome to Architectural Design App</h2>
   <img src="assets/imgs/front2.jpg">
   
-  <marquee><h6>Designs at its best.........</h6></marquee>
+  <marquee><h6>Modern Designs ........</h6></marquee>
   <button ion-button block (click)="Gallery()">Click to View Gallery</button>
 
   <img src="assets/imgs/front.jpg">
