--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,3 +1,4 @@
+
 <ion-header>
   <ion-navbar>
     <ion-title>
@@ -6,6 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>This application serves as the ultimate resource for first-time home buyers, offering user-friendly tools and expert advice at every stage in the process ofacquiring a house first with the cost involved
+<ion-content padding> 
+This application serves as the ultimate resource for first-time home buyers, offering user-friendly tools and expert advice at every stage in the process ofacquiring a house first with the cost involved
 
 </ion-content>
