--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,10 +8,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header>Follow Us On These Platforms</ion-list-header>
     <ion-item>
       <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      WhatsApp 0244886677 <p></p> Twitter <p></p>Facebook Estate Designs
     </ion-item>
   </ion-list>
 </ion-content>
