--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -12,6 +12,7 @@
     <ion-item>
       <ion-icon name="ionic" item-start></ion-icon>
       WhatsApp 0244886677 <p></p> Twitter <p></p>Facebook Estate Designs
+      Our Head office is located at Oyibi oposite Valley View University
     </ion-item>
   </ion-list>
 </ion-content>
