--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,7 +7,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding> 
+<ion-content padding>
+  Real estate is a company that knows the needs of customers and ready to satisfy them at affordable base. Just pay 10% of the money and your 
+  dream house will be ready whiles you pay the rest in installment base.
 This application serves as the ultimate resource for first-time home buyers, offering user-friendly tools and expert advice at every stage in the process ofacquiring a house first with the cost involved
 
 </ion-content>
