--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -27,7 +27,8 @@
 
   <button ion-button block (click)="Fourbed()">4Bedroom Apartment</button>
   <hr>
-
+  <button ion-button block (click)="Fivebed()">5Bedroom Apartment</button>
+  <hr>
   <button ion-button block (click)="Mansion()">Mansion</button>
   <hr>
 
