--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
 
-  <h2 text-center>Select Your Favourite Choice</h2>
+  <h2 text-center>Select Your Dream House</h2>
 
   <img src="assets/imgs/logo.jpg">
   <p></p>
@@ -27,8 +27,7 @@
 
   <button ion-button block (click)="Fourbed()">4Bedroom Apartment</button>
   <hr>
-  <button ion-button block (click)="Fivebed()">5Bedroom Apartment</button>
-  <hr>
+  
   <button ion-button block (click)="Mansion()">Mansion</button>
   <hr>
 
